Dynegy/src/objects/Retail_Quote__c.object
<CustomObject>
    <description>Custom quote object for Retail</description>
    <fields>
        <fullName>ALL_IN_Price__c</fullName>
        <label>Total All-In Price Per MWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent_Fee__c</fullName>
        <formula>Broker_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_PLC__c</fullName>
        <label>Aggregate PLC</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ancillary_Service__c</fullName>
        <formula>ISO_ARR__c  +  ISO_Ancillaries__c  +  ISO_Losses__c  +  ISO_Op_Reserve_RSG__c  +  ISO_Cost_Recovery__c  +  ISO_Inadvertant__c  +  ISO_SSR_RMR__c  +  ISO_Admin__c  +  ISO_FTR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ISO_ARR__c  +  ISO_Ancillaries__c  +  ISO_Losses__c  +  ISO_Op_Reserve_RSG__c  +  ISO_Cost_Recovery__c  +  ISO_Inadvertant__c  +  ISO_SSR_RMR__c  +  ISO_Admin__c  +  ISO_FTR__c</inlineHelpText>
        <label>Ancillary Service</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <inlineHelpText>$/MWH</inlineHelpText>
        <label>Basis</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Allocation__c</fullName>
        <label>Broker Fee Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>$/MWh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Price__c</fullName>
        <formula>Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>UCBNONPOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIER_1_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIER_A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Stable Contract - Evergreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Stable Contract - MTM Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Stable Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Stable PT-C Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block and Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Ancillary_Services__c</fullName>
        <label>Contract Ancillary Services</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Broker_Fee__c</fullName>
        <label>Contract Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Capacity__c</fullName>
        <label>Contract Capacity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy_Off_PK__c</fullName>
        <label>Contract Energy Off PK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy_On_PK__c</fullName>
        <label>Contract Energy On PK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy__c</fullName>
        <label>Contract % Energy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Index_Margin__c</fullName>
        <label>Contract Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Index_adder__c</fullName>
        <label>Contract Index adder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Margin__c</fullName>
        <label>Contract Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Marketing_Cost__c</fullName>
        <label>Contract Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Municipality_Fee__c</fullName>
        <label>Contract Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Off_PK_Block_Size__c</fullName>
        <label>Contract Off PK Block Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_On_PK_Block_Size__c</fullName>
        <label>Contract On PK Block Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_RPS__c</fullName>
        <label>Contract RPS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Transmission__c</fullName>
        <label>Contract Transmission</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Utility_Loss__c</fullName>
        <label>Contract Utility Loss</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vol_Rec_Product__c</fullName>
        <label>Contract Vol Rec Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vol_Rec__c</fullName>
        <label>Contract % Vol Rec</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Voluntary_Rec__c</fullName>
        <label>Contract Voluntary Rec</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Required__c</fullName>
        <formula>OR(X60_Day_Max_Exposure__c &gt;= 375000,  Aggregate_PLC__c &gt;= 5000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Utility_Link__c</fullName>
        <description>Need to be deleted</description>
        <label>Data Utility Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Default_Broker_Fee__c</fullName>
        <description>Default Broker Fee</description>
        <label>Default Broker Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Index_Margin__c</fullName>
        <label>Default Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Margin__c</fullName>
        <description>Default Margin</description>
        <label>Default Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Risk__c</fullName>
        <label>Default Risk</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Loss__c</fullName>
        <formula>Utility_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Loss</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Term__c</fullName>
        <formula>DATE(
    YEAR(Start_Term__c) +
    FLOOR((Term__c + MONTH(Start_Term__c)) / 12) -
    IF (MOD(MONTH(Start_Term__c) + Term__c, 12) = 0,
        1,
        0),

    MOD((Term__c + MONTH(Start_Term__c) - 1), 12) + 1,

    DAY(Start_Term__c)
)</formula>
        <label>End Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Fixed__c</fullName>
        <label>% Energy Fixed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energy_On_Off_Peak__c</fullName>
        <formula>Energy__c  +  Basis__c  +  Shaping__c  +  Swing__c  +  Default_Risk__c  +  Holding_Cost__c  +  Tax__c  +  Contract_Marketing_Cost__c  +  Contract_Margin__c  +  Contract_Index_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy (On/Off Peak)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy__c</fullName>
        <label>Energy</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holding_Cost__c</fullName>
        <label>Holding Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holding_Days__c</fullName>
        <label>Holding Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISO_ARR__c</fullName>
        <label>ISO-ARR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Admin__c</fullName>
        <label>ISO-Admin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Ancillaries__c</fullName>
        <label>ISO-Ancillaries</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Cost_Recovery__c</fullName>
        <label>ISO-Cost Recovery</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_FTR__c</fullName>
        <label>ISO-FTR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Inadvertant__c</fullName>
        <label>ISO-Inadvertant</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Losses__c</fullName>
        <label>ISO-Losses</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_NITS__c</fullName>
        <label>ISO-NITS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Op_Reserve_RSG__c</fullName>
        <label>ISO-Op Reserve-RSG</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Other_Trans__c</fullName>
        <label>ISO-Other Trans</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_SSR_RMR__c</fullName>
        <label>ISO-SSR-RMR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_In_TMF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In TMF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index_Margin_Allocation__c</fullName>
        <label>Index Margin Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>$/MWh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Index_Margin__c</fullName>
        <description>Changed from Text to Currency</description>
        <inlineHelpText>This field was previously labeled as &quot;Index Margin.&quot;  It was changed per ticket T-000122.</inlineHelpText>
        <label>Energy Adder Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MISO_PJM_Transmission_Price__c</fullName>
        <formula>ISO_Other_Trans__c + ISO_NITS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MISO/PJM Transmission Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Allocation__c</fullName>
        <label>Margin Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>$/Mwh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Cost_Allocation__c</fullName>
        <label>Marketing Cost Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>$/Mwh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Muni_Fee__c</fullName>
        <formula>Contract_Municipality_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Muni-Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Muniagg_Profiling__c</fullName>
        <inlineHelpText>Pricing to load profiling on response for muni-agg</inlineHelpText>
        <label>Muniagg-Profiling</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Municipality_Fee_Allocation__c</fullName>
        <label>Municipality Fee Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>$/Mwh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipality_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notional_Value__c</fullName>
        <label>Notional Value</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Off_Peak_Block_Size__c</fullName>
        <label>Off Peak Block Size</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Peak_Block_Size__c</fullName>
        <label>On Peak Block Size</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Dynagy_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Complete_Date_Time__c</fullName>
        <label>Price Complete Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst__c</fullName>
        <label>Pricing Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Method__c</fullName>
        <label>Pricing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <label>Pricing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Valid_Date_Time__c</fullName>
        <label>Pricing Valid Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Dynagy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Index_Adder_Total_Per_KWH__c</fullName>
        <label>Total Energy Adder Per KWH</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Index_Adder_Total__c</fullName>
        <label>Total Energy Adder Per MWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Index_Name__c</fullName>
        <label>Quote Index Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Price_KWH2__c</fullName>
        <formula>Quote_Price_KWH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Price KWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Price_KWH__c</fullName>
        <label>Quote Price KWH</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Price_MwH2__c</fullName>
        <formula>Quote_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quote_Price__c</inlineHelpText>
        <label>Quote Price MWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Price__c</fullName>
        <label>Quote Price MwH</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS1__c</fullName>
        <formula>RPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPS</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS__c</fullName>
        <label>RPS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_Rate__c</fullName>
        <formula>Vol_Rec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vol_Rec__c</inlineHelpText>
        <label>Rec Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Request Status</description>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Load Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Pricing in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error-Invalid Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Utility Web-Service Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error - Price Curve Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shaping__c</fullName>
        <inlineHelpText>$/MWH</inlineHelpText>
        <label>Shaping</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Term__c</fullName>
        <label>Start Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Swing__c</fullName>
        <inlineHelpText>$/MWH</inlineHelpText>
        <label>Swing</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Term in Months</description>
        <label>Term (Whole Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>Tier Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Priced_KWH__c</fullName>
        <label>Total All-in- Price Per KWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Priced_MWH__c</fullName>
        <label>Total Priced MWHrs</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_MWh_Multiply__c</fullName>
        <formula>IF( Quote_Price__c=0 , 0, (Notional_Value__c / Quote_Price__c) * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF( Quote_Price__c=0 , 0, (Notional_Value__c / Quote_Price__c) * 1000)</inlineHelpText>
        <label>Total Quote MWh Multiply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_MWh__c</fullName>
        <formula>IF( Quote_Price__c=0 , 0, Notional_Value__c  /  Quote_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF( Quote_Price__c=0 , 0, Notional_Value__c  /  Quote_Price__c)</inlineHelpText>
        <label>Total Quote MWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UCB_POR1__c</fullName>
        <formula>UCB_POR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UCB_POR__c</inlineHelpText>
        <label>UCB-POR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UCB_POR__c</fullName>
        <label>UCB-POR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Product_with_Term__c</fullName>
        <label>Unique Product with Term</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_Loss__c</fullName>
        <label>Utility Loss</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Settlement_Zone__c</fullName>
        <label>Utility Settlement Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AMIL.AEM.IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEOK_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEOH_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEPOHIO_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAY_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUQ_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>METED_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PECO_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENELEC_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENNPOWER_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPL_RESID_AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI_RESID_AGG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vol_Rec__c</fullName>
        <label>Vol Rec</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voluntary_REC_Generator_Type__c</fullName>
        <label>Voluntary REC/Generator Type</label>
        <picklist>
            <picklistValues>
                <fullName>National Green - E Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green-E - No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green-E - Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Qualified - No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Qualified - Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional - State Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional - Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voluntary_REC_Geographic_Location__c</fullName>
        <label>Voluntary REC Geographic Location</label>
        <picklist>
            <picklistValues>
                <fullName>Illinois - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania - Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voluntary_REC__c</fullName>
        <label>Voluntary REC %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X60_Day_Max_Exposure__c</fullName>
        <label>60 Day Max Exposure</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>select_quote__c</fullName>
        <label>select quote</label>
        <picklist>
            <picklistValues>
                <fullName>quote 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quote 9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Retail Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Quotes</pluralLabel>
    <recordTypes>
        <fullName>Executable</fullName>
        <active>true</active>
        <label>Executable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indicative</fullName>
        <active>true</active>
        <label>Indicative</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_Condition</fullName>
        <active>true</active>
        <description>Start Date must be a future date</description>
        <errorConditionFormula>Start_Term__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Term__c</errorDisplayField>
        <errorMessage>Start date must be a current or future date</errorMessage>
    </validationRules>
</CustomObject>